--- a/templates/products_html.html
+++ b/templates/products_html.html
@@ -124,6 +124,7 @@ tr:hover {
             <li><a href="/MainPage">Главная</a></li>
             <li><a href="/deleted">Удаленные</a></li>
             <li><a href="/spilled">Вышел С.Г</a></li>
+            <li><a href="/prod_list">Список покупок</a></li>
         </ul>
     </nav>
 </header>
